testdata/baselines/reference/submodule/conformance/privateNamesUseBeforeDef.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
privateNamesUseBeforeDef.ts(2,17): error TS2729: Property '#bar' is used before its initialization.
privateNamesUseBeforeDef.ts(17,17): error TS2729: Property '#bar' is used before its initialization.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== privateNamesUseBeforeDef.ts (2 errors) ====
    class A {
        #foo = this.#bar; // Error
                    ~~~~
!!! error TS2729: Property '#bar' is used before its initialization.
!!! related TS2728 privateNamesUseBeforeDef.ts:3:5: '#bar' is declared here.
        #bar = 3;
    }
    
    class A2 {
        #foo = this.#bar(); // No Error
        #bar() { return 3 };
    }
    
    class A3 {
        #foo = this.#bar; // No Error
        get #bar() { return 3 };
    }
    
    class B {
        #foo = this.#bar; // Error
                    ~~~~
!!! error TS2729: Property '#bar' is used before its initialization.
!!! related TS2728 privateNamesUseBeforeDef.ts:18:5: '#bar' is declared here.
        #bar = this.#foo;
    }
    